--- a/app/sass/rating.sass
+++ b/app/sass/rating.sass
@@ -13,6 +13,7 @@
             max-width: 252px
             flex: 1 1 auto
             margin-left: 32px
+            margin-top: 50px
             @media #{$breakpoint-xs-only}
                 max-width: 768px
                 margin-left: 0
@@ -73,6 +74,9 @@
     &-title
         font-family: "Tele2DisplaySerifBoldShortWeb"
         font-size: 38px
+        height: 42px
+        max-height: 42px
+        overflow: hidden
         @media #{$breakpoint-xs-only}
             font-size: 28px
     &-select  
